src/parser/snapshots/ling__syntax__parser__expr__tests__add_if.snap
---
source: src/syntax/parser/expr.rs
expression: "test_parse(\"if a { 12 } else { 14 } + 2\", |p| p.parse_expr())"
---
(Ok(BinOp(
  op: Add,
  lhs: If(
    branches: [
      IfBranch(
        cond: Var(Simple(Unresolved("a"))),
        then: Block(
          stmts: [],
          final_expr: Const(ConstIdx(0)),
        ),
      ),
    ],
    else_: Some(Block(
      stmts: [],
      final_expr: Const(ConstIdx(1)),
    )),
  ),
  rhs: Const(ConstIdx(2)),
)), [], [])
