src/parser/snapshots/ling__syntax__parser__expr__tests__group_err.snap
---
source: src/syntax/parser/expr.rs
expression: "test_parse(\"(1 1)\", |p| p.parse_expr())"
---
(Err(Unexpected(
  expected: "end of parenthesised expression",
  found: Some(Span(
    start: 3,
    end: 4,
  )),
)), [], [])
