src/parser/snapshots/ling__syntax__parser__expr__tests__invalid_accessor.snap
---
source: src/syntax/parser/expr.rs
expression: "test_parse(\"a.12\", |p| p.parse_expr())"
---
(Ok(Dummy), [], [
  InvalidAccessor(Span(
    start: 2,
    end: 4,
  )),
])
